add default values for primitive conversions, include in tests